--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
 }
 
 header{
-    background-color: #00FFFF;
+    background-color: #3cff00;
     padding: 40px;
     display: flex;
     align-items: center;
@@ -25,7 +25,7 @@ header{
     display: block;
 }
 
-h1{
+h1{Missão do Projeto
     font-size: 60px;
     text-transform: uppercase;
     text-align: center; 
@@ -57,7 +57,7 @@ nav {
     border: 2px solid #0f1942;
     padding: 30px;
     border-radius: 40px 20px;
-    background-color: #FFFF00;
+    background-color: #aed3c7;
     font-family: 'Fredericka the Great', cursive;
     color: #0f1942;
   }
