--- a/style.css
+++ b/style.css
@@ -3,12 +3,12 @@
 }
 
 body{
-    font-family: Verdana, Geneva, Tahoma, sans-serif; color: rgb(111, 10, 194);
- background-color: rgb(117, 218, 243); /
+    font-family: Verdana, Geneva, Tahoma, sans-serif; color: rgb(164, 137, 185);
+ background-color: rgb(159, 221, 236); /
 }
 
 header{
-    background-color: #3cff00;
+    background-color: #110101;
     padding: 40px;
     display: flex;
     align-items: center;
@@ -54,10 +54,10 @@ nav {
     font-size: 40px;
     text-align: center;
     margin: 8%;
-    border: 2px solid #0f1942;
+    border: 2px solid #8d3e82;
     padding: 30px;
     border-radius: 40px 20px;
-    background-color: #aed3c7;
+    background-color: #9b5aac;
     font-family: 'Fredericka the Great', cursive;
     color: #0f1942;
   }
@@ -77,7 +77,7 @@ p{
     margin-top: 10%;
     text-decoration: none;
       background-color: white;
-      color: #32CD32;
+      color: #b57bdb;
       padding: 12px;
       display: inline-block;
       font-family: arial, sans-serif;
