--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
 }
 
 body{
-    font-family: Verdana, Geneva, Tahoma, sans-serif; color: rgb(164, 137, 185);
- background-color: rgb(159, 221, 236); /
+    font-family: Verdana, Geneva, Tahoma, sans-serif; color: rgb(122, 97, 42);
+ background-color: rgb(15, 21, 22); /
 }
 
 header{
@@ -21,7 +21,7 @@ header{
     height: 50%;
     margin-left: 2%;
     margin-right: 2%;
-    border: solid #0000CD;
+    border: solid #927517;
     display: block;
 }
 
@@ -54,10 +54,10 @@ nav {
     font-size: 40px;
     text-align: center;
     margin: 8%;
-    border: 2px solid #8d3e82;
+    border: 2px solid #5c4412;
     padding: 30px;
     border-radius: 40px 20px;
-    background-color: #9b5aac;
+    background-color: #7e5915;
     font-family: 'Fredericka the Great', cursive;
     color: #0f1942;
   }
@@ -77,7 +77,7 @@ p{
     margin-top: 10%;
     text-decoration: none;
       background-color: white;
-      color: #b57bdb;
+      color: #717715;
       padding: 12px;
       display: inline-block;
       font-family: arial, sans-serif;
