--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ header{
     height: 50%;
     margin-left: 2%;
     margin-right: 2%;
-    border: solid #927517;
+    border: solid #c41515;
     display: block;
 }
 
@@ -54,12 +54,12 @@ nav {
     font-size: 40px;
     text-align: center;
     margin: 8%;
-    border: 2px solid #5c4412;
+    border: 2px solid #d64350;
     padding: 30px;
     border-radius: 40px 20px;
-    background-color: #7e5915;
+    background-color: #c0002a;
     font-family: 'Fredericka the Great', cursive;
-    color: #0f1942;
+    color: #000000;
   }
 
 h2{
@@ -77,7 +77,7 @@ p{
     margin-top: 10%;
     text-decoration: none;
       background-color: white;
-      color: #717715;
+      color: #f03746;
       padding: 12px;
       display: inline-block;
       font-family: arial, sans-serif;
